--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ header {
  font-weight: bold condensed;
  color: #AC2B37; 
  font-size: 25px;
+ padding:55px;
 }
 
 body {
@@ -17,4 +18,55 @@ h1 {
  font-weight: bold condensed;
  color: #AC2B87; 
  font-size: 31px;
+ padding:25px;
+}
+
+#content {
+    padding:3px;
+}
+
+p {
+    padding:5px;
+}
+
+#WPI{
+    /*center the image*/
+    display: block; 
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;}
+
+#main_nav ul { padding: 0; margin: 0; }
+
+#main_nav li  {
+  list-style-type: none; /* remove bullet points */ 
+}
+
+#main_nav li a {
+   display: block;
+   text-decoration: none; /* remove underline */
+   border-radius: 10px;  /* rounded corners */
+   margin: 6px;
+   padding: 9px;
+   color: #222;
+   font-weight: bold;
+
+   /* nice gradient shade on the buttons */
+   background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
+
+   border: 1px solid #666; /* dark outline */
+}
+
+nav li:active {
+  background-color: #ccc;
+  background-image: none;
+  box-shadow: inset 0 3px 3px rgba(0, 0, 0, .2);
+}
+
+footer {
+ font-family: Futura, Trebuchet MS;
+ font-weight: bold condensed;
+ color: #AC2B37; 
+ font-size: 10px;
+ padding:5px;
 }
